# fokawa-core

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build_msvc/: README.md
contrib/: README.md  gitian-build.py  install_db4.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fokawa-conf.md  fuzzing.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-fokawa.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  fokawa-cli.1  fokawa-qt.1  fokawa-tx.1  fokawa-wallet.1  fokawad.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.cpp  compressor.h  core_io.h  core_read.cpp  core_write.cpp  hash.h  init.cpp  (+51 more)
(+307 files in other folders)
